# DesignPatterns

./: README.md
Behavioral/Observer/: CMakeLists.txt  Journalism.hpp  main.cpp
Behavioral/Observer/Boost_Signals2/: CMakeLists.txt  IObserver.hpp  Journalism.cpp  Journalism.hpp  main.cpp
Behavioral/Observer/OwnImplementation/: ISubject.cpp  ISubject.hpp  Journalism.cpp
Behavioral/Strategy/Dynamic/: FighterJet.cpp  FighterJet.hpp  StartBehaviour.hpp  StrategyTest
Behavioral/Strategy/Static/: Helicopter.cpp  main.cpp
Creational/Builder/classic_builder/: Builder.cpp  Builder.hpp  CMakeLists.txt  main.cpp
Creational/Builder/fluent_interface/: CMakeLists.txt  Customer.cpp  Customer.hpp  main.cpp
Creational/Factories/AbstractFactory/: AbstractFactory.cpp  AbstractFactory.hpp  AmericanEquipment.cpp  AmericanEquipment.hpp  BritishEquipment.cpp  BritishEquipment.hpp  CMakeLists.txt  GermanEquipment.cpp  GermanEquipment.hpp  main.cpp
Creational/Factories/Factory/: CMakeLists.txt  Tank.cpp  Tank.hpp  TankFactory.cpp  TankFactory.hpp  main.cpp
Creational/Factories/FactoryMethod/: CMakeLists.txt  Tank.cpp  Tank.hpp  main.cpp
Creational/Prototype/: CMakeLists.txt  Prototype.cpp  Prototype.hpp  main.cpp
Creational/Singleton/Monostate/: CMakeLists.txt  main.cpp  monostate.cpp  monostate.hpp
Creational/Singleton/Multiton/: CMakeLists.txt  main.cpp  multiton.cpp  multiton.hpp
Creational/Singleton/Rigid/: CMakeLists.txt  main.cpp  populations.txt  singleton.cpp  singleton.hpp
Strategy/: AttackBehaviour.hpp  FlyingObject.cpp  FlyingObject.hpp  makefile
Strategy/Dynamic/: Helicopter.hpp  main.cpp
Strategy/Static/: FighterJet.hpp  FlyingObject.hpp  Helicopter.hpp  makefile
Structural/Adapter/: CMakeLists.txt  main.cpp
Structural/Bridge/: CMakeLists.txt  main.cpp
